# pyfindfiles

./: .mypy.ini  .travis.yml  README.md  codemeta.json  findtext.py  findvid.py  findvid_sync.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
archive/: .travis.yml
pyfindfiles/: __init__.py  async_vid.py  coro.py  sync.py  text.py  vid.py
src/pyfindfiles/: __init__.py  __main__.py  async_vid.py  project.py  text.py  vid.py  video.py
src/pyfindfiles/tests/: test_project.py  test_text.py  test_video.py
tests/: test_scripts.py  test_text.py  test_video.py
