[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfindfiles"
version = "1.5.2"
description = "Concurrent, pipelined text and binary file searching via pure Python, cross-platform."
keywords = ["find", "grep"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3"
]
dynamic = ["readme"]
requires-python = ">=3.8"
dependencies = ["python-dateutil"]

[project.optional-dependencies]
tests = ["pytest"]
lint = ["flake8", "flake8-bugbear", "flake8-builtins", "flake8-blind-except",
"mypy", "types-python-dateutil"]

[project.scripts]
findtext = "pyfindfiles.__main__:find_text"
findvid = "pyfindfiles.__main__:find_video"
findproj = "pyfindfiles.__main__:find_project"

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.black]
line-length = 100

[tool.mypy]
files = ["src"]
ignore_missing_imports = true
strict_optional = true
allow_redefinition = true
show_error_context = false
show_column_numbers = true
